[package]
name = "radio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
http = "1.3.1"
oauth2 = { version = "5.0.0", features = ["timing-resistant-secret-traits"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
toml = "0.8.22"
url = "2.5.4"
xdg = "2.5.2"

[dev-dependencies]
expect = { path = "../expect" }
